# sre-fastapi-platform

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/api/v1/: __init__.py  health.py  items.py
app/core/: __init__.py  exceptions.py  logging.py  metrics.py  middleware.py  redis.py
app/models/: __init__.py  common.py
app/services/: __init__.py  health.py
config/alertmanager/: alertmanager.yml
config/grafana/dashboards/: fastapi-overview.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: datasources.yml
config/loki/: loki-config.yml
config/prometheus/: alert_rules.yml  prometheus.yml
config/promtail/: promtail-config.yml
tests/: __init__.py  conftest.py  test_health.py  test_items.py  test_load.py
